Add backward compatible api back